--- a/pages/compare.html
+++ b/pages/compare.html
@@ -4,11 +4,18 @@
   <title>Assignment 5</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/simple-sidebar.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="/js/gitguard.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/simple-sidebar.css">
+  <link rel="stylesheet" type="text/css" href="../css/gitguard.css">
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
+  <script src="../js/gitguard.js"></script>
+  
+  <link rel="stylesheet" type="text/css" href="../css/multi-select.css">
+  <script src="../js/jquery.multi-select.js"></script>
+  <script src="../js/jquery.quicksearch.js"></script>
 </head>
 <body style="height:1500px">
 
@@ -49,20 +56,15 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12">
-          <h1 id="title">alsdkjaslda</h1>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
+			<h1>Compare</h1>
+			<select id='custom-headers' multiple='multiple' class='searchable'></select>
         </div>
       </div>
     </div>
   </div>
   <!-- /#page-content-wrapper -->
 </div>
-
+  
 </body>
 </html>
 
