--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             var MONTH = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'];
             var DAY = ['Sun', 'Mon', 'Tue', 'Wed', 'Thur', 'Fri', 'Sat'];
             //var localJson = "jsonStuff/dangra.json";
-            var localJson = "jsonStuff/pablohoffman.json";
+            var localJson = "dangra.json";
 
             //var parseTime =d3.time.format("%d-%b-%y");
               
