--- a/StackedBarVisualization.html
+++ b/StackedBarVisualization.html
@@ -1,206 +1,200 @@
 <html>
-	<style>
-		.axis text {
-			font: 14px sans-serif;
-		}
+<style>
+.axis text {
+	font: 14px sans-serif;
+}
 
-		.axis line,
-		.axis path {
-			fill: none;
-			stroke: #000;
-			shape-rendering: crispEdges;
-		}
+.axis line,
+.axis path {
+	fill: none;
+	stroke: #000;
+	shape-rendering: crispEdges;
+}
 
-		.axis--x path {
-			display: none;
-		}
+.axis--x path {
+	display: none;
+}
 
-		svg {
-			border: solid 1px #ccc;
-			font: 10px sans-serif;
-			shape-rendering: crispEdges;
-		}
-	</style>
-	<head>
-		<title> Top 10 Addition/Deletions </title>
-		<script src="./javascripts/d3.min.js"></script>
-	</head>
-	<body>
-		<div align="left">
-			<h1> Top 10 contributions to project (additions/deletions) </h1>
-			<div id="chart">
-			</div>
+svg {
+	border: solid 1px #ccc;
+	font: 10px sans-serif;
+	shape-rendering: crispEdges;
+}
+</style>
+<head>
+	<title> Top 10 Addition/Deletions </title>
+	<script src="./js/d3.min.js"></script>
+</head>
+<body>
+	<div align="left">
+		<h1> Top 10 contributions to project (additions/deletions) </h1>
+		<div id="chart">
 		</div>
-		<div id="viz"></div>
-		<script>
+	</div>
+	<div id="viz"></div>
+  <svg id="stacked" width="600" height="500"></svg></div>
+	<script>
+	//Retrieve JSON data
+	var url = "https://api.github.com/repos/tungnk1993/scrapy/stats/contributors";
+	d3.json(url, function(response) {
+		var authorArray = new Array(response.length).fill(0);
+		var addArray = new Array(response.length).fill(0);
+		var delArray = new Array(response.length).fill(0);
+		var combineArray = new Array(response.length).fill(0);
+
+		// Placeholder for user array
+		var usersArray = new Array(response.length).fill(0);
+
+		for (var i = 0; i < response.length; i++) {
+			var item = response[i];
+
+			authorArray[i] = item.author.login;
+
+			// Placeholder for selecting users
+			if(i < 5){
+				usersArray[i] =item.author.login;
+			}
+
+			var weeks = item.weeks.length;
+			var adds = 0;
+			var dels = 0;
+
+			var weeksData = new Array(weeks).fill(0);
+			weeksData = item.weeks;
+
+			for (var x = 0; x <= weeks - 1; x++) {
+				var weekItem = weeksData[x];
+				addArray[i] += weekItem.a;
+				delArray[i] += weekItem.d;
+			};
+		};
+
+		for (var y = 0; y <= response.length; y++) {
+			combineArray[y] = addArray[y] + delArray[y]
+		};
+
+		var dataArr = [];
+		for (var i = 0; i < response.length; i++) {
+			var obj = {
+				name: authorArray[i],
+				additions: addArray[i],
+				deletions: delArray[i],
+				total: combineArray[i]
+			};
+			dataArr.push(obj);
+		}
+
+		dataArr.sort(function(a, b) {
+			return b.total - a.total;
+		});
+
+		var topData = [];
 
 
-			//Retrieve JSON data
-			var url = "https://api.github.com/repos/tungnk1993/scrapy/stats/contributors";
-			d3.json(url, function(response) {
-				var authorArray = new Array(response.length).fill(0);
-				var addArray = new Array(response.length).fill(0);
-				var delArray = new Array(response.length).fill(0);
-				var combineArray = new Array(response.length).fill(0);
 
-				// Placeholder for user array
-				var usersArray = new Array(response.length).fill(0);
-
-				for (var i = 0; i < response.length; i++) {
-					var item = response[i];
-
-					authorArray[i] = item.author.login;
-
-					// Placeholder for selecting users
-					if(i < 5){
-						usersArray[i] =item.author.login;
-					}
-
-					var weeks = item.weeks.length;
-					var adds = 0;
-					var dels = 0;
-
-					var weeksData = new Array(weeks).fill(0);
-					weeksData = item.weeks;
-
-					for (var x = 0; x <= weeks - 1; x++) {
-						var weekItem = weeksData[x];
-						addArray[i] += weekItem.a;
-						delArray[i] += weekItem.d;
-					};
-				};
-
-				for (var y = 0; y <= response.length; y++) {
-					combineArray[y] = addArray[y] + delArray[y]
-				};
-
-				var dataArr = [];
-				for (var i = 0; i < response.length; i++) {
-					var obj = {
-						name: authorArray[i],
-						additions: addArray[i],
-						deletions: delArray[i],
-						total: combineArray[i]
-					};
-					dataArr.push(obj);
-				}
-
-				dataArr.sort(function(a, b) {
-					return b.total - a.total;
-				});
-
-				var topData = [];
-
-
-
-				for (var i =0; i < response.length; i ++)
+		for (var i =0; i < response.length; i ++)
+		{
+			for (var j = 0; j < usersArray.length; j ++ )
+			{
+				if(authorArray[i] == usersArray[j])
 				{
-					for (var j = 0; j < usersArray.length; j ++ )
-					{
-							if(authorArray[i] == usersArray[j])
-							{
-								topData.push(dataArr[i]);
-							}
-					}
+					topData.push(dataArr[i]);
 				}
-				console.log(authorArray);
-				console.log(usersArray);
-				/*
-				if (response.length > 9) {
-					for (var i = 0; i < 10; i++) {
-						topData.push(dataArr[i]);
-					}
-				} else {
-					for (var i = 0; i < response.length; i++) {
-						topData.push(dataArr[i]);
-					}
-				}
-				*/
+			}
+		}
 
-				var margin = {
-						top: 20,
-						right: 80,
-						bottom: 30,
-						left: 20
-					},
-					width = 1400 - margin.left - margin.right,
-					height = 500 - margin.top - margin.bottom;
+		var d = d3.csvFormat(topData, ["name","additions","deletions","total"]);
+		var new_csv = d3.csv.parseRows(d).slice(1).map(function (d) {
+    return { date: d[0], one: d[1], two: d[2], three: d[3] };
+})
+		console.log(d);
+		//console.log(authorArray);
+		//console.log(usersArray);
 
-				var x = d3.scale.ordinal()
-					.rangeRoundBands([0, width]);
-
-				var y = d3.scale.linear()
-					.rangeRound([height, 0]);
-
-				var z = d3.scale.ordinal().range(["#f64e4e", "#a8d6aa"])
-
-				var xAxis = d3.svg.axis()
-					.scale(x)
-					.orient("bottom")
-
-				var yAxis = d3.svg.axis()
-					.scale(y)
-					.orient("right");
-
-				var svg = d3.select("body").append("svg")
-					.attr("width", width + margin.left + margin.right)
-					.attr("height", height + margin.top + margin.bottom)
-					.append("g")
-					.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+		var svg = d3.select("#stacked"),
+		margin = {top: 20, right: 180, bottom: 30, left: 40},
+		width = +svg.attr("width") - margin.left - margin.right,
+		height = +svg.attr("height") - margin.top - margin.bottom,
+		g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+		// var margin = {top: 20, right: 150, bottom: 50, left: 40},
+		//     width = 600 - margin.left - marginStacked.right,
+		//     height = 500 - margin.top - marginStacked.bottom;
+		//
+		//
+		// var svg = d3.select("#stacked").append("svg")
+		//     .attr("width", widthStacked + marginStacked.left + marginStacked.right)
+		//     .attr("height", heightStacked + marginStacked.top + marginStacked.bottom)
+		//   .append("g")
+		//     .attr("transform", "translate(" + marginStacked.left + "," + marginStacked.top + ")");
+		var x = d3.scaleBand()
+		.rangeRound([0, width])
+		.padding(0.3)
+		.align(0.3);
+		var y = d3.scaleLinear()
+		.rangeRound([height, 0]);
+		var z = d3.scaleOrdinal(d3.schemeCategory20);
+		// .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+		var stack = d3.stack();
+		d3.csvParseRows(d, function(data) {
+			d.add = parseInt(d.additions);
+			d.del = parseInt(d.deletions);
+			d.total = parseInt(d.total);
 
 
-				var layers = d3.layout.stack()(["additions", "deletions"].map(function(c) {
-					return topData.map(function(d) {
-						return {
-							x: d.name,
-							y: d[c]
-						};
-					});
-				}));
+			data.sort(function(a, b) { return b.total - a.total; });
+			x.domain(data.map(function(d) { return d.name; }));
+			y.domain([0, d3.max(data, function(d) { return d.total; })]).nice();
+			z.domain(data.columns.slice(1));
+			g.selectAll(".serie")
+			.data(stack.keys(data.columns.slice(1))(data))
+			.enter().append("g")
+			.attr("class", "serie")
+			.attr("fill", function(d) { return z(d.key); })
+			.selectAll("rect")
+			.data(function(d) { return d; })
+			.enter().append("rect")
+			.attr("x", function(d) { return x(d.data.name); })
+			.attr("y", function(d) { return y(d[1]); })
+			.attr("height", function(d) { return y(d[0]) - y(d[1]); })
+			.attr("width", x.bandwidth());
+			g.append("g")
+			.attr("class", "axis axis--x")
+			.attr("transform", "translate(0," + height + ")")
+			.call(d3.axisBottom(x));
+			g.append("g")
+			.attr("class", "axis axis--y")
+			.call(d3.axisLeft(y).ticks(10, "s"))
+			.append("text")
+			.attr("x", 2)
+			.attr("y", y(y.ticks(10).pop()))
+			.attr("dy", "0.35em")
+			.attr("text-anchor", "start")
+			.attr("fill", "#000")
+			.text("Population");
+			var legend = g.selectAll(".legend")
+			.data(data.columns.slice(1).reverse())
+			.enter().append("g")
+			.attr("class", "legend")
+			.attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; })
+			.style("font", "10px sans-serif");
+			legend.append("rect")
+			.attr("x", width + 18)
+			.attr("width", 18)
+			.attr("height", 18)
+			.attr("fill", z);
+			legend.append("text")
+			.attr("x", width + 44)
+			.attr("y", 9)
+			.attr("dy", ".35em")
+			.attr("text-anchor", "start")
+			.text(function(d) { return d; });
+		})});
+		function type(d, i, columns) {
+			for (i = 1, t = 0; i < columns.length; ++i) t += d[columns[i]] = +d[columns[i]];
+			d.total = t;
+			return d;
+		}
 
-				x.domain(layers[0].map(function(d) {
-					return d.x;
-				}));
-				y.domain([0, d3.max(layers[layers.length - 1], function(d) {
-					return d.y0 + d.y;
-				})]).nice();
-
-
-				var layer = svg.selectAll(".layer")
-					.data(layers)
-					.enter().append("g")
-					.attr("class", "layer")
-					.style("fill", function(d, i) {
-						return z(i);
-					});
-
-				layer.selectAll("rect")
-					.data(function(d) {
-						return d;
-					})
-					.enter().append("rect")
-					.attr("x", function(d) {
-						return x(d.x);
-					})
-					.attr("y", function(d) {
-						return y(d.y + d.y0);
-					})
-					.attr("height", function(d) {
-						return y(d.y0) - y(d.y + d.y0);
-					})
-					.attr("width", x.rangeBand() - 1);
-
-
-				svg.append("g")
-					.attr("class", "axis axis--x")
-					.attr("transform", "translate(0," + height + ")")
-					.call(xAxis);
-
-				svg.append("g")
-					.attr("class", "axis axis--y")
-					.attr("transform", "translate(" + width + ",0)")
-					.call(yAxis);
-			});
 		</script>
-	</body>
-</html>
+		</body>
+		</html>
