Fix visualization 1 to use data array

--- a/StackedBarVisualization.html
+++ b/StackedBarVisualization.html
@@ -32,169 +32,148 @@ svg {
 		</div>
 	</div>
 	<div id="viz"></div>
-  <svg id="stacked" width="600" height="500"></svg></div>
+  <svg id="stacked" width="600" height="500"></svg>
 	<script>
-	//Retrieve JSON data
-	var url = "https://api.github.com/repos/tungnk1993/scrapy/stats/contributors";
-	d3.json(url, function(response) {
-		var authorArray = new Array(response.length).fill(0);
-		var addArray = new Array(response.length).fill(0);
-		var delArray = new Array(response.length).fill(0);
-		var combineArray = new Array(response.length).fill(0);
+    //Retrieve JSON data
+    var url = "https://api.github.com/repos/tungnk1993/scrapy/stats/contributors";
+    d3.json(url, function(response) {
+      var authorArray = new Array(response.length).fill(0);
+      var addArray = new Array(response.length).fill(0);
+      var delArray = new Array(response.length).fill(0);
+      var combineArray = new Array(response.length).fill(0);
 
-		// Placeholder for user array
-		var usersArray = new Array(response.length).fill(0);
+      // Placeholder for user array
+      var usersArray = new Array(response.length).fill(0);
 
-		for (var i = 0; i < response.length; i++) {
-			var item = response[i];
+      for (var i = 0; i < response.length; i++) {
+        var item = response[i];
 
-			authorArray[i] = item.author.login;
+        authorArray[i] = item.author.login;
 
-			// Placeholder for selecting users
-			if(i < 5){
-				usersArray[i] =item.author.login;
-			}
+        // Placeholder for selecting users
+        if(i < 5){
+          usersArray[i] =item.author.login;
+        }
 
-			var weeks = item.weeks.length;
-			var adds = 0;
-			var dels = 0;
+        var weeks = item.weeks.length;
+        var adds = 0;
+        var dels = 0;
 
-			var weeksData = new Array(weeks).fill(0);
-			weeksData = item.weeks;
+        var weeksData = new Array(weeks).fill(0);
+        weeksData = item.weeks;
 
-			for (var x = 0; x <= weeks - 1; x++) {
-				var weekItem = weeksData[x];
-				addArray[i] += weekItem.a;
-				delArray[i] += weekItem.d;
-			};
-		};
+        for (var x = 0; x <= weeks - 1; x++) {
+          var weekItem = weeksData[x];
+          addArray[i] += weekItem.a;
+          delArray[i] += weekItem.d;
+        };
+      };
 
-		for (var y = 0; y <= response.length; y++) {
-			combineArray[y] = addArray[y] + delArray[y]
-		};
+      for (var y = 0; y <= response.length; y++) {
+        combineArray[y] = addArray[y] + delArray[y]
+      };
 
-		var dataArr = [];
-		for (var i = 0; i < response.length; i++) {
-			var obj = {
-				name: authorArray[i],
-				additions: addArray[i],
-				deletions: delArray[i],
-				total: combineArray[i]
-			};
-			dataArr.push(obj);
-		}
+      var dataArr = [];
+      for (var i = 0; i < response.length; i++) {
+        var obj = {
+          name: authorArray[i],
+          additions: addArray[i],
+          deletions: delArray[i],
+          total: combineArray[i]
+        };
+        dataArr.push(obj);
+      }
 
-		dataArr.sort(function(a, b) {
-			return b.total - a.total;
-		});
+      dataArr.sort(function(a, b) {
+        return b.total - a.total;
+      });
 
-		var topData = [];
+      var data = [];
 
+      for (var i =0; i < response.length; i ++)
+      {
+        for (var j = 0; j < usersArray.length; j ++ )
+        {
+          if(authorArray[i] == usersArray[j])
+          {
+            data.push(dataArr[i]);
+          }
+        }
+      }
+      
+      var svg = d3.select("#stacked"),
+        margin = {top: 20, right: 180, bottom: 30, left: 40},
+        width = +svg.attr("width") - margin.left - margin.right,
+        height = +svg.attr("height") - margin.top - margin.bottom,
+        g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
+      var x = d3.scaleBand()
+        .rangeRound([0, width])
+        .padding(0.3)
+        .align(0.3);
 
-		for (var i =0; i < response.length; i ++)
-		{
-			for (var j = 0; j < usersArray.length; j ++ )
-			{
-				if(authorArray[i] == usersArray[j])
-				{
-					topData.push(dataArr[i]);
-				}
-			}
-		}
+      var y = d3.scaleLinear()
+        .rangeRound([height, 0]);
 
-		var d = d3.csvFormat(topData, ["name","additions","deletions","total"]);
-		var new_csv = d3.csv.parseRows(d).slice(1).map(function (d) {
-    return { date: d[0], one: d[1], two: d[2], three: d[3] };
-})
-		console.log(d);
-		//console.log(authorArray);
-		//console.log(usersArray);
+      var z = d3.scaleOrdinal(d3.schemeCategory20);
 
-		var svg = d3.select("#stacked"),
-		margin = {top: 20, right: 180, bottom: 30, left: 40},
-		width = +svg.attr("width") - margin.left - margin.right,
-		height = +svg.attr("height") - margin.top - margin.bottom,
-		g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-		// var margin = {top: 20, right: 150, bottom: 50, left: 40},
-		//     width = 600 - margin.left - marginStacked.right,
-		//     height = 500 - margin.top - marginStacked.bottom;
-		//
-		//
-		// var svg = d3.select("#stacked").append("svg")
-		//     .attr("width", widthStacked + marginStacked.left + marginStacked.right)
-		//     .attr("height", heightStacked + marginStacked.top + marginStacked.bottom)
-		//   .append("g")
-		//     .attr("transform", "translate(" + marginStacked.left + "," + marginStacked.top + ")");
-		var x = d3.scaleBand()
-		.rangeRound([0, width])
-		.padding(0.3)
-		.align(0.3);
-		var y = d3.scaleLinear()
-		.rangeRound([height, 0]);
-		var z = d3.scaleOrdinal(d3.schemeCategory20);
-		// .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
-		var stack = d3.stack();
-		d3.csvParseRows(d, function(data) {
-			d.add = parseInt(d.additions);
-			d.del = parseInt(d.deletions);
-			d.total = parseInt(d.total);
+      var stack = d3.stack();
+      
+      for (var num = 0; num < data.length; num++) {
+        x.domain(data.map(function(d) { return d.name; }));
+        y.domain([0, d3.max(data, function(d) { return d.total; })]).nice();
+        z.domain([ "additions", "deletions" ]);
 
+        g.selectAll(".serie")
+          .data(stack.keys([ "deletions", "additions" ])(data))
+          .enter().append("g")
+            .attr("class", "serie")
+            .attr("fill", function(d) { return z(d.key); })
+          .selectAll("rect")
+          .data(function(d) { return d; })
+          .enter().append("rect")
+            .attr("x", function(d) { return x(d.data.name); })
+            .attr("y", function(d) { return y(d[1]); })
+            .attr("height", function(d) { return y(d[0]) - y(d[1]); })
+            .attr("width", x.bandwidth());
 
-			data.sort(function(a, b) { return b.total - a.total; });
-			x.domain(data.map(function(d) { return d.name; }));
-			y.domain([0, d3.max(data, function(d) { return d.total; })]).nice();
-			z.domain(data.columns.slice(1));
-			g.selectAll(".serie")
-			.data(stack.keys(data.columns.slice(1))(data))
-			.enter().append("g")
-			.attr("class", "serie")
-			.attr("fill", function(d) { return z(d.key); })
-			.selectAll("rect")
-			.data(function(d) { return d; })
-			.enter().append("rect")
-			.attr("x", function(d) { return x(d.data.name); })
-			.attr("y", function(d) { return y(d[1]); })
-			.attr("height", function(d) { return y(d[0]) - y(d[1]); })
-			.attr("width", x.bandwidth());
-			g.append("g")
-			.attr("class", "axis axis--x")
-			.attr("transform", "translate(0," + height + ")")
-			.call(d3.axisBottom(x));
-			g.append("g")
-			.attr("class", "axis axis--y")
-			.call(d3.axisLeft(y).ticks(10, "s"))
-			.append("text")
-			.attr("x", 2)
-			.attr("y", y(y.ticks(10).pop()))
-			.attr("dy", "0.35em")
-			.attr("text-anchor", "start")
-			.attr("fill", "#000")
-			.text("Population");
-			var legend = g.selectAll(".legend")
-			.data(data.columns.slice(1).reverse())
-			.enter().append("g")
-			.attr("class", "legend")
-			.attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; })
-			.style("font", "10px sans-serif");
-			legend.append("rect")
-			.attr("x", width + 18)
-			.attr("width", 18)
-			.attr("height", 18)
-			.attr("fill", z);
-			legend.append("text")
-			.attr("x", width + 44)
-			.attr("y", 9)
-			.attr("dy", ".35em")
-			.attr("text-anchor", "start")
-			.text(function(d) { return d; });
-		})});
-		function type(d, i, columns) {
-			for (i = 1, t = 0; i < columns.length; ++i) t += d[columns[i]] = +d[columns[i]];
-			d.total = t;
-			return d;
-		}
+        g.append("g")
+          .attr("class", "axis axis--x")
+          .attr("transform", "translate(0," + height + ")")
+          .call(d3.axisBottom(x));
 
-		</script>
-		</body>
-		</html>
+        g.append("g")
+            .attr("class", "axis axis--y")
+            .call(d3.axisLeft(y).ticks(10, "s"))
+          .append("text")
+            .attr("x", 2)
+            .attr("y", y(y.ticks(10).pop()))
+            .attr("dy", "0.35em")
+            .attr("text-anchor", "start")
+            .attr("fill", "#000")
+            .text("Additions/Deletions");
+
+        var legend = g.selectAll(".legend")
+          .data([ "additions", "deletions" ])
+          .enter().append("g")
+            .attr("class", "legend")
+            .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; })
+            .style("font", "10px sans-serif");
+
+        legend.append("rect")
+          .attr("x", width - 18)
+          .attr("width", 18)
+          .attr("height", 18)
+          .attr("fill", z);
+
+        legend.append("text")
+          .attr("x", width - 24)
+          .attr("y", 9)
+          .attr("dy", ".35em")
+          .attr("text-anchor", "start")
+          .text(function(d) { return d; });
+      }
+    });
+  </script>
+</body>
+</html>
