--- a/pages/compare.html
+++ b/pages/compare.html
@@ -11,6 +11,7 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="../js/gitguard.js"></script>
   
   <link rel="stylesheet" type="text/css" href="../css/multi-select.css">
