--- a/largest files in repo.html
+++ b/largest files in repo.html
@@ -125,6 +125,7 @@
     };
     
     //get top5 size in json format
+    //git command: git ls-tree -r -t -l --full-name HEAD | sort -n -k 4 | tail -n 10
     var largestFiles = {
         "files":[
           {"path":"CS3201/lib/AutoTester_debug.lib", "size":"3504066" },
