--- a/pages/compare.html
+++ b/pages/compare.html
@@ -14,9 +14,9 @@
   <script src="https://d3js.org/d3.v4.min.js"></script>
   
 
-    <link href="../build/nv.d3.css" rel="stylesheet" type="text/css">
+    <link href="nv.d3.css" rel="stylesheet" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js" charset="utf-8"></script>
-    <script src="../build/nv.d3.js"></script>
+    <script src="nv.d3.js"></script>
 
   <script src="../js/gitguard.js"></script>
 
