--- a/pages/StabilityTable.html
+++ b/pages/StabilityTable.html
@@ -42,6 +42,18 @@ var data = {
 //git ls-files -z | xargs -0n1 git blame -w | perl -n -e '/^.*?\((.*?)\s+[\d]{4}/; print $1,"\n"' | sort -f | uniq -c | sort -n
 //Lists out all authors + number of lines of codes still persistant in latest version
 
+var url = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com/authorsStability";
+d3.json(url, function(response) {
+  var dataPersist = new Array(response.length).fill(0);
+  for (var i = 0; i < response.length; i++) {
+    var obj = {
+      lines: parseFloat(response[i].lines),
+      name: response[i].name
+    }
+    dataPersist.push(obj);
+  }
+  console.log(dataPersist);
+  /*
 var dataPersist = {
   "members": [
     {lines:"10", name:"name1"},
@@ -53,6 +65,7 @@ var dataPersist = {
     {lines:"12", name:"name7"}
   ]
 }
+*/
 var linePerArr = [];
 for (var i = 0; i < data.members.length; i++) {
   for (var j = 0; j < dataPersist.members.length; j++) {
@@ -115,6 +128,6 @@ function tabulate(data, columns) {
 
 // render the table
  var peopleTable = tabulate(dataArr, ["Name", "LinesPersist","Stability"]);
-
+})
 </script>
 </body>
