--- a/pages/compare.html
+++ b/pages/compare.html
@@ -12,10 +12,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   <script src="../js/gitguard.js"></script>
-  
+  <script src="../js/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js"></script>
+  <link href="../css/nv.d3.css" rel="stylesheet" type="text/css">
+  <script src="../js/nv.d3.js"></script>
+
   <link rel="stylesheet" type="text/css" href="../css/multi-select.css">
   <script src="../js/jquery.multi-select.js"></script>
   <script src="../js/jquery.quicksearch.js"></script>
+	
+	
+	
+	
 </head>
 <body style="height:1500px">
 
@@ -51,20 +59,53 @@
   </div>
   <!-- /#sidebar-wrapper -->
 
-  <!-- Page Content -->
-  <div id="page-content-wrapper">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-			<h1>Compare</h1>
-			<select id='custom-headers' multiple='multiple' class='searchable'></select>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- /#page-content-wrapper -->
-</div>
-  
-</body>
+	<!-- Page Content -->
+		<div id="page-content-wrapper">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-lg-12">
+						<h1>Compare</h1>
+						<select id='custom-headers' multiple='multiple' class='searchable'></select>
+					</div>
+					<div class="col-lg-12">
+
+						<div>
+							<h1>Chart 1</h1>
+
+							<body>
+								<style>
+									text {
+										font: 12px sans-serif;
+									}
+									
+									svg {
+										display: block;
+									}
+									
+									html,
+									body,
+									#chart,
+									svg {
+										margin: 0px;
+										padding: 0px;
+										height: 100%;
+										width: 100%;
+									}
+								</style>
+								<div id="chart" class='with-3d-shadow with-transitions'>
+									<svg style="height: 720px;"></svg>
+								</div>
+
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /#page-content-wrapper -->
+	</div>
+
+	</body>
+
 </html>
 
