--- a/pages/ActivityOverTime.html
+++ b/pages/ActivityOverTime.html
@@ -80,58 +80,73 @@ for (var i = 0; i < data.members.length; i++)
   }
 
 }
+
+dataArr.sort(function(a,b) {
+  a = new Date(a.date);
+    b = new Date(b.date);
+    return a>b ? -1 : a<b ? 1 : 0;
+});
+
 console.log(dataArr);
 
-var svg = d3.select("svg"),
-    margin = {top: 20, right: 20, bottom: 30, left: 50},
-    width = +svg.attr("width") - margin.left - margin.right,
-    height = +svg.attr("height") - margin.top - margin.bottom,
-    g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+var dataString = d3.csvFormat(dataArr, ["date","count"]);
+console.log(dataString);
+var margin = {top: 20, right: 20, bottom: 30, left: 50},
+    width = 960 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
 
-var parseTime = d3.timeParse("%d-%b-%y");
+// parse the date / time
+var parseTime = d3.timeParse("%y-%M-%d");
 
-var x = d3.scaleTime()
-    .rangeRound([0, width]);
+// set the ranges
+var x = d3.scaleTime().range([0, width]);
+var y = d3.scaleLinear().range([height, 0]);
 
-var y = d3.scaleLinear()
-    .rangeRound([height, 0]);
-
-var line = d3.line()
+// define the line
+var valueline = d3.line()
     .x(function(d) { return x(d.date); })
     .y(function(d) { return y(d.count); });
 
-d3.tsv("data.tsv", function(d) {
-  d.date = parseTime(d.date);
-  d.close = +d.close;
-  return d;
-}, function(error, data) {
+// append the svg obgect to the body of the page
+// appends a 'group' element to 'svg'
+// moves the 'group' element to the top left margin
+var svg = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform",
+          "translate(" + margin.left + "," + margin.top + ")");
+
+// Get the data
+d3.csv(dataString, function(error, data) {
   if (error) throw error;
 
-  x.domain(d3.extent(data, function(d) { return d.date; }));
-  y.domain(d3.extent(data, function(d) { return d.count; }));
+  // format the data
+  data.forEach(function(d) {
+      d.date = parseTime(d.date);
+      d.close = +d.count;
+  });
 
-  g.append("g")
-      .attr("class", "axis axis--x")
+  // Scale the range of the data
+  x.domain(d3.extent(data, function(d) { return d.date; }));
+  y.domain([0, d3.max(data, function(d) { return d.count; })]);
+
+  // Add the valueline path.
+  svg.append("path")
+      .data([data])
+      .attr("class", "line")
+      .attr("d", valueline);
+
+  // Add the X Axis
+  svg.append("g")
       .attr("transform", "translate(0," + height + ")")
       .call(d3.axisBottom(x));
 
-  g.append("g")
-      .attr("class", "axis axis--y")
-      .call(d3.axisLeft(y))
-    .append("text")
-      .attr("fill", "#000")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", "0.71em")
-      .style("text-anchor", "end")
-      .text("Price ($)");
+  // Add the Y Axis
+  svg.append("g")
+      .call(d3.axisLeft(y));
 
-  g.append("path")
-      .datum(data)
-      .attr("class", "line")
-      .attr("d", line);
 });
-
 
 </script>
 </body>
