--- a/pages/StabilityTable.html
+++ b/pages/StabilityTable.html
@@ -29,68 +29,83 @@ td, th {
 //git log --shortstat --author="Bevin" | grep -E "fil(e|es) changed" | awk '{inserted+=$4; deleted+=$6} END {print "additions: ", inserted, "deletions: ", deleted }'
 //With a given author name, return me a json obj in this format {name: "name1", additions:"40", deletions:"30"}
 //insert into data.members array
+var data = getData();
+console.log(data.size);
+if (data.length == undefined)
+{
+  console.log(data);
+  data = getData();
+}
+var dataPersist = getDataPersist();
+var dataArr = processData(data,dataPersist);
+var peopleTable = tabulate(dataArr, ["Name", "LinesPersist","Stability"]);
 
-
-var url = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com/authorsAdditionsDeletions";
-var data = d3.json(url, function(response) {
-  console.log("Test");
-  console.log(response);
-  var data = new Array(response.length).fill(0);
-  for (var i = 0; i < response.length; i++) {
-    var obj = {
-      name: response[i].name,
-      additions: parseFloat(response[i].additions),
-      deletions: parseFloat(response[i].deletions)
-
-    }
-    data.push(obj);
-      console.log(data);
-      return data;
-  }
-})
-
-
-/*
-var data = {
-  "members": [
-    {name: "name1", additions:"40", deletions:"30"},
-    {name: "name2", additions:"30", deletions:"20"},
-    {name: "name3", additions:"20", deletions:"30"},
-    {name: "name4", additions:"30", deletions:"60"},
-    {name: "name5", additions:"40", deletions:"40"},
-    {name: "name6", additions:"10", deletions:"20"},
-    {name: "name7", additions:"30", deletions:"40"}
-  ]
-};
-*/
-//git ls-files -z | xargs -0n1 git blame -w | perl -n -e '/^.*?\((.*?)\s+[\d]{4}/; print $1,"\n"' | sort -f | uniq -c | sort -n
-//Lists out all authors + number of lines of codes still persistant in latest version
-/*
-var url = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com/authorsStability";
-d3.json(url, function(response) {
-  var dataPersist = new Array(response.length).fill(0);
-  for (var i = 0; i < response.length; i++) {
-    var obj = {
-      lines: parseFloat(response[i].lines),
-      name: response[i].name
-    }
-    dataPersist.push(obj);
-  }
-  console.log(dataPersist);
-  */
-
-      var dataPersist = {
-        "members": [
-          {lines:"10", name:"name1"},
-          {lines:"11", name:"name2"},
-          {lines:"12", name:"name3"},
-          {lines:"15", name:"name6"},
-          {lines:"13", name:"name4"},
-          {lines:"14", name:"name5"},
-          {lines:"12", name:"name7"}
-        ]
+function getData()
+{
+  var url = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com/authorsAdditionsDeletions?repo=https://github.com/scrapy/scrapy";
+  return d3.json(url, function(response) {
+    console.log("Test");
+    console.log(response);
+    var data = new Array(response.length).fill(0);
+    for (var i = 0; i < response.length; i++) {
+      var obj = {
+        name: response[i].name,
+        additions: parseFloat(response[i].additions),
+        deletions: parseFloat(response[i].deletions)
       }
+      data.push(obj);
+        console.log(data);
+        return data;
+    }
+  })
+}
 
+function getDataPersist()
+{
+
+  /*
+  var data = {
+    "members": [
+      {name: "name1", additions:"40", deletions:"30"},
+      {name: "name2", additions:"30", deletions:"20"},
+      {name: "name3", additions:"20", deletions:"30"},
+      {name: "name4", additions:"30", deletions:"60"},
+      {name: "name5", additions:"40", deletions:"40"},
+      {name: "name6", additions:"10", deletions:"20"},
+      {name: "name7", additions:"30", deletions:"40"}
+    ]
+  };
+  */
+  //git ls-files -z | xargs -0n1 git blame -w | perl -n -e '/^.*?\((.*?)\s+[\d]{4}/; print $1,"\n"' | sort -f | uniq -c | sort -n
+  //Lists out all authors + number of lines of codes still persistant in latest version
+  /*
+  var url = "http://http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com/authorsStability?repo=https://github.com/scrapy/scrapy";
+  d3.json(url, function(response) {
+    var dataPersist = new Array(response.length).fill(0);
+    for (var i = 0; i < response.length; i++) {
+      var obj = {
+        lines: parseFloat(response[i].lines),
+        name: response[i].name
+      }
+      dataPersist.push(obj);
+    }
+    console.log(dataPersist);
+    */
+  var dataPersist = {
+    "members": [
+      {lines:"10", name:"name1"},
+      {lines:"11", name:"name2"},
+      {lines:"12", name:"name3"},
+      {lines:"15", name:"name6"},
+      {lines:"13", name:"name4"},
+      {lines:"14", name:"name5"},
+      {lines:"12", name:"name7"}
+    ]
+  }
+  return dataPersist
+}
+
+function processData(data, dataPersist){
 
 var linePerArr = [];
 for (var i = 0; i < data.members.length; i++) {
@@ -113,7 +128,8 @@ for (var i = 0; i < data.members.length; i++) {
   dataArr.push(obj);
 }
 console.log(dataArr);
-
+return dataArr;
+}
 
 
 
@@ -156,7 +172,7 @@ function tabulate(data, columns) {
 }
 
 // render the table
- var peopleTable = tabulate(dataArr, ["Name", "LinesPersist","Stability"]);
+
 
 //})
 </script>
