--- a/pages/ActivityOverTime.html
+++ b/pages/ActivityOverTime.html
@@ -20,6 +20,7 @@ td, th {
 <svg width="960" height="500"></svg>
 <script>
 
+/*
 //git log --pretty=format:%aD" --date=short
 //returns a list of commit dates to sum up to get activity over time
 
@@ -88,7 +89,7 @@ console.log(dataArr);
 
 var dataString = d3.csvFormat(dataArr, ["date","count"]);
 console.log(dataString);
-
+*/
 var svg = d3.select("svg"),
     margin = {top: 20, right: 20, bottom: 30, left: 50},
     width = +svg.attr("width") - margin.left - margin.right,
@@ -107,7 +108,7 @@ var line = d3.line()
     .x(function(d) { return x(d.date); })
     .y(function(d) { return y(d.close); });
 
-d3.tsv("test.tsv", function(d) {
+d3.tsv("https://raw.githubusercontent.com/lnxz/GitGuard/master/pages/test.tsv?token=AK64dHWG3XoBm3qazh2I6fwpmr0J5zcWks5YKKhgwA%3D%3D", function(d) {
   d.date = parseTime(d.date);
   d.close = +d.close;
   return d;
