--- a/pages/ActivityOverTime.html
+++ b/pages/ActivityOverTime.html
@@ -107,7 +107,7 @@ var line = d3.line()
     .x(function(d) { return x(d.date); })
     .y(function(d) { return y(d.close); });
 
-d3.tsv("https://raw.githubusercontent.com/lnxz/GitGuard/master/pages/test.tsv?token=AK64dDXPgYKCKsh8U-kC1r8_lIgT7TaMks5YKKlKwA%3D%3D", function(d) {
+d3.csv("https://raw.githubusercontent.com/lnxz/GitGuard/master/pages/test.tsv?token=AK64dDEzU5z8wJ0406K5X-ki-l9QyS_mks5YKKoEwA%3D%3D", function(d) {
 console.log(d);
   d.date = parseTime(d.date);
   d.close = +d.close;
